crates/sifr_python_parser/tests/snapshots/valid_syntax@ann_assign_stmt_simple_target.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/inline/ok/ann_assign_stmt_simple_target.py
---
## AST

```
Module(
    ModModule {
        range: 0..45,
        body: [
            AnnAssign(
                StmtAnnAssign {
                    range: 0..6,
                    target: Name(
                        ExprName {
                            range: 0..1,
                            id: "a",
                            ctx: Store,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            range: 3..6,
                            id: "int",
                            ctx: Load,
                        },
                    ),
                    value: None,
                    simple: true,
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    range: 17..25,
                    target: Name(
                        ExprName {
                            range: 18..19,
                            id: "a",
                            ctx: Store,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            range: 22..25,
                            id: "int",
                            ctx: Load,
                        },
                    ),
                    value: None,
                    simple: false,
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    range: 26..34,
                    target: Attribute(
                        ExprAttribute {
                            range: 26..29,
                            value: Name(
                                ExprName {
                                    range: 26..27,
                                    id: "a",
                                    ctx: Load,
                                },
                            ),
                            attr: Identifier {
                                id: "b",
                                range: 28..29,
                            },
                            ctx: Store,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            range: 31..34,
                            id: "int",
                            ctx: Load,
                        },
                    ),
                    value: None,
                    simple: false,
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    range: 35..44,
                    target: Subscript(
                        ExprSubscript {
                            range: 35..39,
                            value: Name(
                                ExprName {
                                    range: 35..36,
                                    id: "a",
                                    ctx: Load,
                                },
                            ),
                            slice: NumberLiteral(
                                ExprNumberLiteral {
                                    range: 37..38,
                                    value: Int(
                                        0,
                                    ),
                                },
                            ),
                            ctx: Store,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            range: 41..44,
                            id: "int",
                            ctx: Load,
                        },
                    ),
                    value: None,
                    simple: false,
                },
            ),
        ],
    },
)
```
