crates/sifr_python_parser/tests/snapshots/valid_syntax@async_for_statement.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/inline/ok/async_for_statement.py
---
## AST

```
Module(
    ModModule {
        range: 0..30,
        body: [
            For(
                StmtFor {
                    range: 0..29,
                    is_async: true,
                    target: Name(
                        ExprName {
                            range: 10..16,
                            id: "target",
                            ctx: Store,
                        },
                    ),
                    iter: Name(
                        ExprName {
                            range: 20..24,
                            id: "iter",
                            ctx: Load,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                range: 26..29,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 26..29,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
        ],
    },
)
```
