crates/sifr_python_parser/tests/snapshots/valid_syntax@async_function_definition.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/inline/ok/async_function_definition.py
---
## AST

```
Module(
    ModModule {
        range: 0..21,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    range: 0..20,
                    is_async: true,
                    decorator_list: [],
                    name: Identifier {
                        id: "foo",
                        range: 10..13,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 13..15,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 17..20,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 17..20,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
