crates/sifr_python_parser/tests/snapshots/valid_syntax@async_with_statement.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/inline/ok/async_with_statement.py
---
## AST

```
Module(
    ModModule {
        range: 0..21,
        body: [
            With(
                StmtWith {
                    range: 0..20,
                    is_async: true,
                    items: [
                        WithItem {
                            range: 11..15,
                            context_expr: Name(
                                ExprName {
                                    range: 11..15,
                                    id: "item",
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                range: 17..20,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 17..20,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
