crates/sifr_python_parser/tests/snapshots/valid_syntax@comma_separated_regular_list_terminator.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/inline/ok/comma_separated_regular_list_terminator.py
---
## AST

```
Module(
    ModModule {
        range: 0..181,
        body: [
            Expr(
                StmtExpr {
                    range: 141..144,
                    value: List(
                        ExprList {
                            range: 141..144,
                            elts: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 142..143,
                                        value: Int(
                                            0,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 145..151,
                    value: List(
                        ExprList {
                            range: 145..151,
                            elts: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 146..147,
                                        value: Int(
                                            0,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 149..150,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 152..159,
                    value: List(
                        ExprList {
                            range: 152..159,
                            elts: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 153..154,
                                        value: Int(
                                            0,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 156..157,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 160..169,
                    value: List(
                        ExprList {
                            range: 160..169,
                            elts: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 161..162,
                                        value: Int(
                                            0,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 164..165,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 167..168,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 170..180,
                    value: List(
                        ExprList {
                            range: 170..180,
                            elts: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 171..172,
                                        value: Int(
                                            0,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 174..175,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 177..178,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
