crates/sifr_python_parser/tests/snapshots/valid_syntax@del_targets_terminator.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/inline/ok/del_targets_terminator.py
---
## AST

```
Module(
    ModModule {
        range: 0..29,
        body: [
            Delete(
                StmtDelete {
                    range: 0..8,
                    targets: [
                        Name(
                            ExprName {
                                range: 4..5,
                                id: "a",
                                ctx: Del,
                            },
                        ),
                        Name(
                            ExprName {
                                range: 7..8,
                                id: "b",
                                ctx: Del,
                            },
                        ),
                    ],
                },
            ),
            Expr(
                StmtExpr {
                    range: 10..14,
                    value: Tuple(
                        ExprTuple {
                            range: 10..14,
                            elts: [
                                Name(
                                    ExprName {
                                        range: 10..11,
                                        id: "c",
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        range: 13..14,
                                        id: "d",
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: false,
                        },
                    ),
                },
            ),
            Delete(
                StmtDelete {
                    range: 15..23,
                    targets: [
                        Name(
                            ExprName {
                                range: 19..20,
                                id: "a",
                                ctx: Del,
                            },
                        ),
                        Name(
                            ExprName {
                                range: 22..23,
                                id: "b",
                                ctx: Del,
                            },
                        ),
                    ],
                },
            ),
            Expr(
                StmtExpr {
                    range: 24..28,
                    value: Tuple(
                        ExprTuple {
                            range: 24..28,
                            elts: [
                                Name(
                                    ExprName {
                                        range: 24..25,
                                        id: "c",
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        range: 27..28,
                                        id: "d",
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: false,
                        },
                    ),
                },
            ),
        ],
    },
)
```
